# OBS-studio-Plugin

./: .gitignore  README.md
obs-qr-donations/: BREEZ_QUICK_START.md  BUILD_GUIDE.md  BUILD_QUICK_START.md  BUILD_TROUBLESHOOTING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  USER_GUIDE.md  WINDOWS_BUILD_STEPS.md  WINDOWS_SETUP_GUIDE.md  breez_sdk_spark.go  build-manual.bat  build-quick.bat  create-release.bat  demo_qr_functionality.py  inspect_config.cpp  install.bat  install.sh  requirements-dev.txt  setup-windows.bat  test-plugin.ps1
obs-qr-donations/.github/workflows/: ci.yml  release.yml
obs-qr-donations/docs/: API.md  BREEZ_SPARK_GUIDE.md  SPARK_INTEGRATION.md
obs-qr-donations/resources/: resources.qrc
obs-qr-donations/scripts/: README.md  build-and-test.bat  build-and-test.sh  build-with-vcpkg.ps1  create_github_release.py  create_installers.py  generate_screenshots.py  generate_tutorial.py  quick-build.ps1  requirements.txt  run_integration_test.py  setup_spark_sdk.bat  setup_spark_sdk.sh  test_installation.py  test_local_installation.ps1  test_plugin.py  test_script_README.md
obs-qr-donations/src/: asset-manager.cpp  asset-manager.hpp  backup-reminder-dialog.cpp  backup-reminder-dialog.hpp  breez-handler.cpp  breez-handler.hpp  breez-service-stub.cpp  breez-service-stub.hpp  breez-service.cpp  breez-service.hpp  coin-animation.hpp  donation-effect.cpp  donation-effect.hpp  manage-wallet-dialog.cpp  manage-wallet-dialog.hpp  plugin-main.cpp  qr-donations.cpp  qr-donations.hpp  qr-generator.cpp  qr-generator.hpp  qr-widget.cpp  qr-widget.hpp  send-payment-dialog.cpp  send-payment-dialog.hpp
obs-qr-donations/tests/: CMakeLists.txt  test_breez_integration.cpp  test_breez_send_stub.cpp  test_breez_stub.cpp  test_main.cpp
obs-qr-donations/ui/: qr-donations.ui
